Dockerfile para app challer

--- a/challer/Dockerfile
+++ b/challer/Dockerfile
@@ -91,7 +91,7 @@ RUN sed -i 's/C9cg382g3D/12345678/g' "/opt/autodeploy_projects/DareU/prod1/busin
 #RUN sed -i 's/ondareDBCalidad/challer/g' "/opt/autodeploy_projects/DareU/prod1/business-core/conf/application.conf"
 #RUN sed -i 's/pQAAppSec01/pAppCh01/g' "/opt/autodeploy_projects/DareU/prod1/business-core/conf/application.conf"
 #RUN sed -i 's/C9cg382g3D/U4caRRv38kv9/g' "/opt/autodeploy_projects/DareU/prod1/business-core/conf/application.conf"
-RUN cd /opt/autodeploy_projects/DareU/prod1/business-core && mkdir lib
+RUN mkdir -p /opt/autodeploy_projects/DareU/prod1/business-core/lib
 RUN chmod 777 -R /opt/autodeploy_projects/DareU/prod1/business-core/lib
 RUN chmod 777 -R /var/xcouty
 ADD https://repository-sd.s3.amazonaws.com/challer/utils_htc-1.0-SNAPSHOT.jar /opt/autodeploy_projects/DareU/prod1/business-core/lib
