--- a/challer/Dockerfile
+++ b/challer/Dockerfile
@@ -106,5 +106,5 @@ ADD https://repository-sd.s3.amazonaws.com/challer/StartServer.sh /root
 #CMD ["/usr/bin/supervisord"]
 RUN chmod +x /root/StartServer.sh
 WORKDIR /opt/autodeploy_projects/DareU/prod1/business-core
-ENTRYPOINT ["/usr/bin/sh","/root/StartServer.sh"]
+ENTRYPOINT ["/root/StartServer.sh"]
 #CMD [ "bin/bash" ]
